Added ability configuration where user can choose which blocklist(s) and device(s) and how long to set session for

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 # Ignore environment variables file
 .env
+
+# Ignore virtual environment
+env/
+.venv/
+venv/
+
+# Ignore Python-specific files
+__pycache__/
+*.pyc
+
+# Ignore configuration file
+config.json
+
+# screenshots
+*.png
